# opensip

./: README.md  pyproject.toml
examples/: _env.py  env.example.tmp  make_call.py  receive_call.py
src/opensip/: __init__.py  exceptions.py  transaction.py  ua.py
tests/: bench_codecs.py  test_register.py  test_transaction.py  tests_stats.py
