[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensip"
version = "0.2.1"
description = "Pure-Python SIP/RTP user-agent library (UAC + UAS) with asyncio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "artan" }]
keywords = ["sip", "voip", "rtp", "telephony", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Internet Phone",
    "Topic :: Communications :: Telephony",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
audio = ["sounddevice>=0.4.6", "numpy>=1.24"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/artanergin44-collab/opensip"
Issues = "https://github.com/artanergin44-collab/opensip/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/opensip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
